--- a/cpu/esp32/Makefile.features
+++ b/cpu/esp32/Makefile.features
@@ -4,6 +4,8 @@ ifeq (esp32,$(CPU_FAM))
 else ifneq (,$(filter esp32c3,$(CPU_FAM)))
   CPU_ARCH = rv32
   CPU_CORE = rv32imc
+  RUST_TARGET = riscv32imc-unknown-none-elf
+  FEATURES_PROVIDED += rust_target
 else ifneq (,$(filter esp32s2 esp32s3,$(CPU_FAM)))
   CPU_ARCH = xtensa
   CPU_CORE = xtensa-lx7
