--- a/examples/rust-hello-world/Cargo.toml
+++ b/examples/rust-hello-world/Cargo.toml
@@ -14,6 +14,9 @@ crate-type = ["staticlib"]
 # the nightly-only lang_items feature.
 panic = "abort"
 
+[patch.crates-io]
+riot-sys = { path = "../../rust-riot-sys"}
+
 [dependencies]
 riot-wrappers = { version = "0.8", features = [ "set_panic_handler" ] }
 
